--- a/changelog/migrations-upgrades/upgrade-guide.mdx
+++ b/changelog/migrations-upgrades/upgrade-guide.mdx
@@ -1,176 +1,158 @@
 ---
-title: "Upgrade Guide"
-description: "Provides actionable, step-by-step instructions for upgrading to the latest version, including prerequisites (such as required C++ standards), common migration tasks, and troubleshooting tips."
+title: "How to Safely Upgrade"
+description: "Step-by-step guide to upgrading GoogleTest and GoogleMock. Includes advice for handling code migrations, updating build files, and validating success, ensuring a smooth and reliable upgrade process."
 ---
 
-# Upgrade Guide
+# How to Safely Upgrade GoogleTest and GoogleMock
 
-This Upgrade Guide provides detailed, step-by-step instructions to help you smoothly transition to the latest version of GoogleTest. It covers essential prerequisites like required C++ standards, common migration tasks encountered during upgrades, and troubleshooting tips to resolve issues that might arise.
+This guide walks you through the complete process of safely upgrading your GoogleTest and GoogleMock versions. Whether you are updating to a newer release or moving between major versions, following these steps ensures your tests continue to work smoothly with minimal disruption.
 
 ---
 
-## 1. Prerequisites for Upgrading
+## 1. Preparing for the Upgrade
 
-Before upgrading your project to the latest GoogleTest version, ensure your environment meets the following requirements:
+Before applying any changes, make sure you have a clear understanding of the current state of your tests and build infrastructure.
 
-- **C++ Language Standard**: The latest GoogleTest release requires at least **C++17** support.
-  - This is enforced in the codebase (see `gtest-port.h`), which triggers a compilation error for earlier standards.
-  - To comply, set your compiler to use C++17 or higher. For example, in CMake, add:
-  
-    ```cmake
-    set(CMAKE_CXX_STANDARD 17)
-    set(CMAKE_CXX_STANDARD_REQUIRED ON)
-    ```
+- **Backup your existing codebase and tests.** This lets you easily revert if unexpected issues arise.
+- **Review your current version of GoogleTest and GoogleMock.** Note the exact version numbers.
+- **Read release notes and migration guides** for the target version to assess any breaking changes or deprecations.
 
-- **Supported Platforms and Compilers**: Verify that your compiler and platform are supported per Google's [Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support).
-  - Reference the supported platforms table [here](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md).
+<Info>
+Tip: Consult the [Breaking Changes & Migration Notes](https://github.com/google/googletest/blob/main/docs/changelog/migrations-upgrades/breaking-changes.md) for detailed compatibility and upgrade advice.
+</Info>
 
-- **Build Tooling**: Update your build system to accommodate changes in dependencies or flags. For example, GoogleTest has tightened support for threading and exception handling which might affect build configurations.
+---
 
+## 2. Upgrade Workflow
+
+Follow this step-by-step flow to ensure a structured upgrade process:
+
+### Step 1: Fetch and Integrate New Version
+
+- Clone or download the new release of GoogleTest and GoogleMock from the official repository.
+- If using CMake, consider embedding the new source as a subdirectory (`add_subdirectory()`) or update your `find_package` references accordingly.
+- For system-installed versions, update your package or rebuild and reinstall using the provided build instructions.
+
+### Step 2: Update Build Files
+
+- Adjust your build scripts (CMakeLists, Bazel, Makefiles, etc.) to point to the new headers and libraries.
+- Check any `pkg-config` scripts if used, and regenerate them as needed.
+- Verify that compiler flags such as `-DGTEST_HAS_PTHREAD`, `-DGTEST_CREATE_SHARED_LIBRARY`, or C++ standard flags (at least C++17) are correctly set.
+
+### Step 3: Migrate Code
+
+- Examine your test code for any deprecated macros or APIs; update them as per the new version's documentation.
+- Pay special attention to mocking macros: migrate old-style `MOCK_METHODn` macros to the unified `MOCK_METHOD` syntax.
+- Update any custom actions, matchers, or expectation code that may be affected by changes in mock strictness or invocation order.
+
+### Step 4: Compile and Build
+
+- Build your updated test code with the newly integrated GoogleTest and GoogleMock.
+- Address any compiler errors or warnings that arise from API changes.
+- Use CMake’s recommended idioms for integration to avoid issues with runtime library mismatches, especially on Windows (consider `gtest_force_shared_crt`).
+
+### Step 5: Run and Validate Tests
+
+- Execute your entire test suite.
+- Confirm that all tests pass without new failures or warnings.
+- Investigate any failures that may stem from API or behavioral changes.
 
 <Tip>
-Using C++17 as the minimum language standard enables GoogleTest to leverage modern language features, improving testing robustness and consistency.
+Use GoogleTest's verbosity flags (e.g., `--gtest_verbose=info`) to gain insight into test execution and mock call matching during validation.
 </Tip>
 
 ---
 
-## 2. Common Migration Tasks
+## 3. Handling Specific Upgrade Considerations
 
-### 2.1 Update Your Compiler Flags
+### C++ Standard Compliance
 
-- Ensure your compiler flags explicitly request C++17 or higher.
-- For compilers with less automatic detection, manually add flags such as:
-  - GCC/Clang: `-std=c++17`
-  - MSVC: Use `/std:c++17` or higher.
+- The newer versions of GoogleTest require at least C++17. Ensure your compiler and build environment reflect this requirement.
+- Set C++17 explicitly in your build files:
 
-### 2.2 Adjust Build System for GoogleTest
+```cmake
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+```
 
-- If you build GoogleTest or GoogleMock as part of your project using CMake, confirm your `CMakeLists.txt` uses at least CMake 3.14 to support googletest's `FetchContent` functionality.
-- Example snippet integrating GoogleTest via `FetchContent`:
+### Mocking Macros Migration
 
-  ```cmake
-  include(FetchContent)
-  FetchContent_Declare(
-    googletest
-    URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
-  )
-  # For Windows: Prevent overriding the parent project's compiler/linker settings
-  set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-  FetchContent_MakeAvailable(googletest)
+- Replace deprecated `MOCK_METHODn` and `MOCK_CONST_METHODn` with the unified `MOCK_METHOD` macro.
+- Properly wrap template or comma-containing types in extra parentheses or use type aliases to avoid macro parsing issues.
 
-  add_executable(example example.cpp)
-  target_link_libraries(example gtest_main)
-  add_test(NAME example_test COMMAND example)
-  ```
+Example:
 
-- Confirm that other build system integration (Bazel, Makefiles) uses appropriate language standards and supports the `gtest_force_shared_crt` option if needed on MSVC builds.
+```cpp
+// Old style (deprecated)
+MOCK_METHOD1(Foo, bool(int));
 
-### 2.3 Adjust for Runtime Library Conflicts on Windows
+// New style (recommended)
+MOCK_METHOD(bool, Foo, (int));
 
-- On Visual Studio projects, GoogleTest links statically to the runtime by default, which can conflict with projects using dynamic linking.
-- Use the `gtest_force_shared_crt` CMake option to align runtime linkage dynamically:
-  
-  ```cmake
-  set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-  ```
+// For complicated types:
+using PairType = std::pair<int, bool>;
+MOCK_METHOD(PairType, GetPair, ());
+```
 
-- This prevents linker errors related to mismatched runtime libraries (e.g., `LNK2038` errors referencing `RuntimeLibrary` values).
+### Build Flags and Threading
 
-### 2.4 Review Macro Name Clashes
+- For multi-threaded tests, verify that `-DGTEST_HAS_PTHREAD=1` is set if using pthreads.
+- On Windows, avoid runtime library mismatches by enabling `gtest_force_shared_crt` option.
 
-- In C++, macros do not respect namespaces and can clash with other library macros.
-- If your code or dependencies define macros that conflict with GoogleTest, use the `GTEST_DONT_DEFINE_<MACRO>` flags to instruct GoogleTest to rename its macros.
-- For example, to avoid conflict on `TEST` macro:
+### Shared vs Static Libraries
 
-  ```plaintext
-  -DGTEST_DONT_DEFINE_TEST=1
-  ```
-
-  Then use `GTEST_TEST` explicitly.
-
-### 2.5 Threading and Pthread Support
-
-- GoogleTest is thread-safe if pthread support is enabled on your platform.
-- You may force pthread usage on or off via:
-
-  ```plaintext
-  -DGTEST_HAS_PTHREAD=1
-  or
-  -DGTEST_HAS_PTHREAD=0
-  ```
-
-- When using your own build scripts, ensure you link against pthreads appropriately to avoid linker errors.
-
-### 2.6 Shared Library (DLL) Build Adjustments
-
-- If you want to build GoogleTest as a shared library (DLL on Windows), you need to add:
-
-  ```plaintext
-  -DGTEST_CREATE_SHARED_LIBRARY=1
-  ```
-
-- Tests building against the DLL should add:
-
-  ```plaintext
-  -DGTEST_LINKED_AS_SHARED_LIBRARY=1
-  ```
-
-- Note: Even if not necessary today for some compilers (e.g., GCC), adding these is recommended to future-proof your builds.
+- Decide whether to build GoogleTest and GoogleMock as static or shared libraries.
+- Set `-DGTEST_CREATE_SHARED_LIBRARY=1` when building shared libraries and `-DGTEST_LINKED_AS_SHARED_LIBRARY=1` when linking your tests.
 
 ---
 
-## 3. Troubleshooting Tips
+## 4. Troubleshooting Common Issues
 
-### 3.1 Compilation Errors Related to C++ Standard
+### Compilation Errors
 
-- If you encounter errors like
-  
-  ```plaintext
-  #error C++ versions less than C++17 are not supported.
-  ```
+- Check for missing or incorrect include directories.
+- Verify all macros required for your environment are set, such as disabling or enabling pthread support.
+- Ensure consistent run-time library flags, especially on Windows.
 
-  ensure your build system sets the compiler to use C++17 or greater.
+### Linking Failures
 
-### 3.2 Linker Errors for Runtime Library Mismatches
+- Confirm your linker flags include GoogleTest and GoogleMock libraries.
+- Ensure `pkg-config` or CMake find_package correctly locates the installed libraries.
 
-- MSVC linking errors mentioning `RuntimeLibrary` mismatch indicate incompatible runtime linking.
-- Use `gtest_force_shared_crt` option in CMake or adjust your project settings to unify runtime linkage.
+### Test Failures After Upgrade
 
-### 3.3 Macro Redefinition or Name Clashes
+- Investigate deprecated or changed assertions and matchers.
+- Check mock object behavior (nice, naggy, strict) if test failures are related to unexpected or uninteresting calls.
+- Use increased verbosity options for detailed failure analysis.
 
-- Errors about macro redefinition often relate to GoogleTest macros conflicting with other libraries.
-- Define `GTEST_DONT_DEFINE_<MACRO>` flags to prevent GoogleTest from defining them.
+### Build System Integration
 
-### 3.4 Missing pthreads or Thread Support
-
-- On platforms where pthreads are assumed but unavailable, force disable threading support with `-DGTEST_HAS_PTHREAD=0`.
-- Adjust linking flags to include pthreads if needed.
-
-<Tip>
-Running a small test project with GoogleTest after upgrade can quickly validate environment compatibility before full project integration.
-</Tip>
+- If your build system caches aggressively, consider a clean rebuild.
+- Validate submodule or FetchContent URL updates if used.
 
 ---
 
-## 4. Summary of Upgrade Steps
+## 5. Validating Successful Upgrade
 
-1. Verify your compiler supports **C++17 or later** and update your build environment accordingly.
-2. Adjust GoogleTest build integration in your project (CMake, Bazel, etc.) to use supported methods and required compiler flags.
-3. Address runtime linkage and macro conflicts, especially on Windows/MSVC.
-4. Validate threading support and adjust flags for pthread usage.
-5. Test your existing test suites and fix any arising build or run-time issues following detailed error messages.
+After upgrading, success is evident when:
 
----
+- All existing tests compile and run without warnings or errors.
+- Mocking behavior remains consistent and expectations verified.
+- No unexpected test failures or flaky test behavior appear.
 
-## 5. Additional Resources
-
-- [Supported Platforms](https://github.com/google/googletest/blob/main/docs/platforms.md) — Confirm platform, compiler, and toolchain compatibility.
-- [Prerequisites](https://google.github.io/googletest/getting-started/setup-basics/prerequisites) — Understand environment and language requirements.
-- [CMake Integration Guide](https://google.github.io/googletest/guides/integration-and-best-practices/build-integration) — For step-by-step build system setup.
-- [Breaking Changes](https://google.github.io/googletest/changelog/migrations-upgrades/breaking-changes) — Important changes that may affect your upgrade.
-- [Deprecations](https://google.github.io/googletest/changelog/migrations-upgrades/deprecations) — Features being phased out.
-- [FAQ & Common Issues](https://google.github.io/googletest/getting-started/troubleshooting-help/faq-common-issues) — Troubleshooting help.
+Use the GoogleTest and GoogleMock logs and verbose output to confirm no unexpected calls or warnings occur.
 
 ---
 
-By following this guide, users can confidently upgrade GoogleTest with minimal disruptions, ensuring compatibility and leveraging the latest framework improvements.
+## 6. Reference Links and Further Reading
+
+- [GoogleTest Build with CMake](https://github.com/google/googletest/blob/main/googletest/README.md#build-with-cmake)
+- [GoogleMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
+- [Breaking Changes & Migration Notes](https://github.com/google/googletest/blob/main/docs/changelog/migrations-upgrades/breaking-changes.md)
+- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html)
+- [GoogleTest Primer](https://google.github.io/googletest/primer.html)
+- [GoogleTest User's Guide](https://google.github.io/googletest/)
+
+---
+
+By following these structured upgrade best practices, you will minimize disruption in your testing workflow and fully leverage the improvements in GoogleTest and GoogleMock with confidence and clarity.
