--- a/getting-started/setup-and-installation/prerequisites-system-requirements.mdx
+++ b/getting-started/setup-and-installation/prerequisites-system-requirements.mdx
@@ -1,138 +1,128 @@
 ---
-title: "Prerequisites and System Requirements"
-description: "Outlines the supported platforms, required C++ standard (C++17 or higher), compilers, and any critical dependencies. Equips users with the essential knowledge to confirm their environment is compatible before beginning the installation process."
+title: "Prerequisites & System Requirements"
+description: "Understand what you need before starting: required C++ language standards (C++17 or above), supported compilers, operating systems, and toolchains. This page details the environments where GoogleTest is officially supported, drawing on community and internal usage insights."
 ---
 
-# Prerequisites and System Requirements
+# Prerequisites & System Requirements
 
-GoogleTest is a robust C++ testing framework designed to work seamlessly across multiple platforms and compiler environments. Before proceeding with installation and usage, it is essential to confirm that your development environment meets the necessary requirements to build and run GoogleTest successfully.
+This page details the essential environment requirements you must meet to successfully build and use GoogleTest. By understanding the supported C++ standards, compilers, operating systems, and toolchains, you can ensure a smooth integration and avoid common setup issues.
 
----
+## 1. Required C++ Language Standard
 
-## 1. Supported Platforms
+GoogleTest requires a C++ compiler that supports **C++17 or a more recent standard**.
 
-GoogleTest supports a wide variety of operating systems, with stable and well-tested support on the following major platforms:
+- You must compile your test code and GoogleTest source with at least C++17 enabled.
+- Enforce this by setting the standard version explicitly in your build system. For example, with CMake:
 
-- **Linux** (including various distributions)
-- **Windows** (Desktop, MinGW, Mobile variants)
-- **Mac OS X**
+```cmake
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+```
 
-Additional platforms have varying levels of support and may require manual tweaks or community contributions:
+- If your project is primarily C, you can pass the flag manually:
 
-- BSD variants (FreeBSD, NetBSD, OpenBSD, DragonFlyBSD)
-- Solaris, AIX, HP-UX
-- Embedded platforms such as Android, Native Client (NaCl), Fuchsia
+```bash
+-DCMAKE_CXX_FLAGS='-std=c++17'
+```
 
-If you are working on any other platforms, contribution of patches or feedback is welcomed by the GoogleTest maintainers.
+> <Tip>Always specify this explicitly to prevent subtle build failures or undefined behaviors when using features from C++17.</Tip>
 
-For a full latest list and detailed platform matrix, refer to the [Supported Platforms](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md) maintained by Google.
+## 2. Supported Compilers
 
----
+GoogleTest is compatible with a broad set of C++ compilers known to support the C++17 standard, including but not limited to:
 
-## 2. Compiler and Language Standards
+- **GCC** (GNU Compiler Collection) 7.1 or later
+- **Clang** 5.0 or later
+- **Microsoft Visual Studio** 2017 Update 3 (MSVC 19.11) or later
+- Other modern compilers that fully support C++17 features
 
-GoogleTest requires a modern C++ environment with **support for C++17 or higher**. This ensures compatibility with language features and standard library enhancements used internally.
+> <Warning>The minimum MSVC compiler version is 19.11 (Visual Studio 2017 Update 3). Versions earlier than this may lack necessary feature support.</Warning>
 
-### Minimum C++ Standard:
+## 3. Supported Operating Systems
 
-- **C++17 (ISO/IEC 14882:2017)** or newer is mandatory.
+GoogleTest is officially tested and used on the following operating systems:
 
-### Recommended Compiler Versions:
+- **Linux** (multiple distributions)
+- **Windows** (Desktop versions, with full Visual Studio support)
+- **macOS** (with Xcode installed)
+- Other UNIX-like environments that can run compatible compilers
 
-- **GCC:** 7.0 or above
-- **Clang:** 3.4.1 or above
-- **MSVC:** Visual Studio 2017 Update 3 (MSVC 19.11) or later
+Platform support is heavily tested on these OSes, but GoogleTest strives to maintain compatibility on additional platforms according to community contributions.
 
-Older compilers or those with incomplete C++17 support will fail to compile GoogleTest.
+## 4. Toolchains and Build Systems
 
-<Warning>
-Be sure to explicitly set the C++ standard in your build system (e.g., via `-std=c++17` or CMake's `CMAKE_CXX_STANDARD` flag) to avoid silent compatibility issues.
-</Warning>
+While GoogleTest supports various build systems, the recommended and widely tested workflow leverages:
 
----
+- **CMake** (minimum version 3.14 for `FetchContent` support, recommended 3.16 or above)
+  - Generates native build files for your environment.
+  - Supports building GoogleTest standalone or embedded into existing projects.
+- **Make, Ninja, Visual Studio Build Tools, Xcode**
+  - These are used as backends after configuring the build with CMake.
 
-## 3. Required Compiler Features and Settings
+**Bazel** is officially supported as an alternative build system, primarily for large scale builds with GoogleTest's provided Bazel BUILD files.
 
-GoogleTest uses several modern C++ language features and compiler capabilities:
+> <Info>Depending on your platform and environment, ensure you have an appropriate build tool installed (e.g., `make` on Linux, Visual Studio build tools on Windows) alongside CMake.</Info>
 
-- Variadic macros support
-- RTTI (Run-time Type Information) enabled (recommended for full features)
-- Exception handling (optional but recommended)
-- Support for standard threading or pthreads on POSIX systems
+## 5. Multi-threading Environment
 
-While GoogleTest can be built without exceptions or RTTI, some features may be limited. It is advisable to enable these features unless your environment strictly prohibits them.
+GoogleTest is thread-safe on platforms where the pthread library exists.
 
----
+- On many POSIX compliant systems, this is available by default.
+- On Windows, synchronization primitives are implemented internally to ensure thread safety.
 
-## 4. Critical Dependencies
+If you encounter issues related to threading or want to explicitly force pthread detection, use the compiler flag:
 
-While GoogleTest is mostly self-contained, it relies on the following dependencies:
+```bash
+-DGTEST_HAS_PTHREAD=1
+```
 
-- **Standard C++ Library** supporting C++17
-- **pthreads library** on POSIX compliant systems (Linux, Mac, BSD, etc.) for threading support
-- **Abseil and RE2** libraries if `GTEST_HAS_ABSL` option is enabled in the build (optional, advanced configuration)
+or disable threading with:
 
-On Windows, threading primitives are implemented natively without the need for external pthread libraries.
+```bash
+-DGTEST_HAS_PTHREAD=0
+```
 
----
+> <Note>If you manually build GoogleTest without CMake, ensure to link pthreads (`-pthread`) on POSIX platforms.</Note>
 
-## 5. Environment and Build System Considerations
+## 6. Visual Studio Runtime Configuration
 
-- GoogleTest can be built as either a static or shared library. If you want to build it as a shared library (DLL), you must define `-DGTEST_CREATE_SHARED_LIBRARY=1` during compilation.
-- To compile tests or code that link to GoogleTest shared libraries, define `-DGTEST_LINKED_AS_SHARED_LIBRARY=1`.
-- On POSIX platforms, ensure that the pthreads library is linked if threading support is desired, typically by linking with `-lpthread` (handled automatically by CMake's `find_package(Threads)`).
-- Visual Studio projects should align C++ runtime linkage (dynamic vs static) with GoogleTest settings to avoid linker errors.
+When building with Visual Studio, GoogleTest links the C++ runtime statically by default, which can conflict with projects that link it dynamically.
 
----
+To resolve this, enable dynamic linking of the runtime libraries by passing the CMake option:
 
-## 6. System Resources and Network
+```bash
+-Dgtest_force_shared_crt=ON
+```
 
-No specific system memory or storage requirements are imposed by GoogleTest beyond normal development environment needs.
+This option makes GoogleTest's runtime linkage consistent with your project settings.
 
-Network connectivity is not required for GoogleTest runtime; source code clones and dependency fetches require internet access only if fetching via CMake or similar tooling.
+## 7. Summary Checklist
 
----
+Before building or integrating GoogleTest, verify the following:
 
-## 7. Summary Checklist Before Installation
+- Your compiler supports **C++17 or higher**.
+- Your OS is one of the supported platforms: **Linux, Windows Desktop, macOS**.
+- Your build environment has **CMake 3.14+** installed if you use the FetchContent integration.
+- You have the required **build tools** for your OS.
+- On Windows, adjust the runtime linkage with `gtest_force_shared_crt` if necessary.
+- Thread safety requires pthread on POSIX; confirm `-pthread` flags when building outside CMake.
 
-Before you begin installing GoogleTest, verify the following:
+## Troubleshooting Tips
 
-- [ ] Your platform is officially supported (Linux, Windows Desktop, Mac OS X).
-- [ ] Your compiler supports C++17 or newer.
-- [ ] Exception handling and RTTI are enabled (recommended).
-- [ ] Pthreads library is available on POSIX systems if threading is needed.
-- [ ] You have correctly configured your build environment to respect the C++17 standard.
+- **Build failure due to C++ version:** Double-check your compiler flags and enforce C++17.
+- **Unrecognized platform:** GoogleTest may build but some features could be disabled; consult community forums or consider contributing fixes.
+- **Linker errors for pthread:** Add appropriate `-pthread` or link via your build system.
+- **Runtime library mismatch on Windows:** Use `-Dgtest_force_shared_crt=ON` to align with your project settings.
 
----
+## Additional Resources
 
-## 8. Troubleshooting Environment Compatibility
-
-If you encounter build errors or missing features:
-
-- Verify your compiler version meets minimum supported versions.
-- Ensure your build system sets C++17 explicitly.
-- Check that pthreads library is linked on POSIX platforms.
-- On Windows, ensure Visual Studio updates are installed to meet version requirements.
-- Disable or define feature macros like `GTEST_HAS_PTHREAD` explicitly if autodetection fails:
-
-  ```sh
-  -DGTEST_HAS_PTHREAD=1  # Enable pthread support
-  -DGTEST_HAS_PTHREAD=0  # Disable pthread support
-  ```
-
-- Review any compile-time errors for missing C++17 or RTTI features.
-
-For extended troubleshooting, consult the [Installation Instructions by Platform](../setup-and-installation/installation-platforms) page and the [Troubleshooting Guide](../first-test-experience/troubleshooting-and-validation).
+- [Quickstart: Building with CMake](docs/quickstart-cmake.md): Step-by-step setup using CMake.
+- [Supported Platforms](docs/platforms.md): Detailed information on platform support.
+- [Installation Methods](getting-started/setup-and-installation/installing-with-cmake-bazel): Guides for installation.
+- [Advanced Configuration](api-reference/extending-configuration/platform-and-build-configuration): For fine-tuning build and platform specifics.
 
 ---
 
-## References
+For a complete understanding and to proceed smoothly, visit the [Quickstart guide](docs/quickstart-cmake.md) next for hands-on setup instructions.
 
-- [GoogleTest C++ Standard Enforcement](https://github.com/google/googletest/blob/main/googletest/include/gtest/internal/gtest-port.h#L92-L106)
-- [Supported Platforms Matrix](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md)
-- [Official GoogleTest GitHub Repository](https://github.com/google/googletest)
-- [CMake Build Instructions](../setup-and-installation/installation-platforms)
-
----
-
-Ensuring your environment meets these prerequisites will streamline your onboarding and integration process with GoogleTest, enabling you to focus on building reliable and maintainable C++ tests with confidence.
+<Check>Make sure you have your compiler and CMake versions aligned with the prerequisites outlined here before proceeding.</Check>
